Adopt visitor pattern for setting `Game` across various components including filters, listeners, and sorters. Refactor `SetGameVisitor` and update corresponding implementations and tests.